<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/pos"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/word"
        android:layout_marginEnd="100dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        />

    <TextView
        android:id="@+id/word"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintStart_toEndOf="@id/pos"
        app:layout_constraintEnd_toStartOf="@+id/checkbox"
        app:layout_constraintTop_toTopOf="parent"
        android:textIsSelectable="true"
        android:clickable="true"
        android:focusable="true" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        app:layout_constraintStart_toEndOf="@+id/word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>